# python-chatvolt-mcp

./: .coverage  .env.example  README.md  TODO.md  install.sh  main.py  opencode.jsonc  pyproject.toml  ralph-loop.sh  run.py
ralph/: RALPH.md
ralph/.ralph/: guardrails.md
specs/: agent-tools.yaml  agents.yaml  contacts.yaml  conversations.yaml  crm.yaml  datastores.yaml  dispatches.yaml  mercadolivre.yaml  whatsapp.yaml  zapper.yaml
src/: config.py  server.py
src/prompts/: workflows.py
src/tools/: all_definitions.py  loader.py
src/tools/definitions/: __init__.py  agents.py  artifacts.py  blacklist.py  contacts.py  conversation_mgmt.py  conversations.py  crm.py  crm_logs.py  crm_scenarios.py  datasources.py  datastores.py  dispatches.py  instagram.py  interactive.py  mercadolivre.py  telegram.py  twilio.py  whatsapp_official.py  whitelist.py  zapi.py  zapper.py
tests/: test_loader.py  test_new_features.py  test_prompts.py  test_server.py
