[project]
name = "chatvolt-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
